@@ -4,12 +4,13 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 import ru.kata.spring.boot_security.demo.models.Role;
 import ru.kata.spring.boot_security.demo.models.User;
-import ru.kata.spring.boot_security.demo.servises.AdminService;
+import ru.kata.spring.boot_security.demo.servises.RoleService;
 import ru.kata.spring.boot_security.demo.servises.UserService;
 
 import javax.annotation.PostConstruct;
 import java.util.ArrayList;
 import java.util.Collections;
+import java.util.List;
 
 /**
  * password - admin
@@ -18,26 +19,27 @@ import java.util.Collections;
 public class AccountOfAdmin {
 
     private final UserService userService;
-    private final AdminService adminService;
+    private final RoleService roleService;
 
     @Autowired
-    public AccountOfAdmin(UserService userService, AdminService adminService) {
+    public AccountOfAdmin(UserService userService, RoleService roleService) {
         this.userService = userService;
-        this.adminService = adminService;
+        this.roleService = roleService;
     }
 
     @PostConstruct
     public void admin() {
-        User admin = new User("admin", "admin","admin",
-                "arbatros@email.com", 20, "$2a$12$3NnpSCW24QGSrDBlctXR/uMDiJZmqE87hQDFKY0odOU.A5/6G2Nd6");
+        User admin = new User("admin","admin",
+                "admin@email.ru", 20, "$2a$12$3NnpSCW24QGSrDBlctXR/uMDiJZmqE87hQDFKY0odOU.A5/6G2Nd6");
         Role roleUser  = new Role("ROLE_USER");
         Role roleAdmin  = new Role("ROLE_ADMIN");
-        admin.setRoleList(new ArrayList<>(Collections.singletonList(roleUser)));
-        admin.getRoleList().add(roleAdmin);
-        roleUser.setUser(admin);
-        roleAdmin.setUser(admin);
+        admin.setRoleList(new ArrayList<>(List.of(roleUser, roleAdmin)));
+        roleUser.setUserList(new ArrayList<>(Collections.singletonList(admin)));
+        roleAdmin.setUserList(new ArrayList<>(Collections.singletonList(admin)));
         if (userService.userByUsername(admin.getUsername()).isEmpty()) {
-            adminService.saveAdmin(admin);
+            userService.save(admin);
+            roleService.saveRole(roleUser);
+            roleService.saveRole(roleAdmin);
         }
     }
 }
